# pytest-chronicle

./: README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
src/pytest_chronicle/: __init__.py  config.py  ingest.py  pytest_plugin.py
src/pytest_chronicle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pytest_chronicle/alembic/versions/: 20250917_0002_indexes_and_jsonb.py
src/pytest_chronicle/cli/: __init__.py  __main__.py  db_cmd.py  ingest_cmd.py  latest_red_cmd.py  run_cmd.py
tests/integration/: test_pytest_plugin_autoload.py
tests/unit/: test_cli_commands.py
